name:                haskell-yelp
version:             0.1.0.0
synopsis:            Sample Haskell program using Yelp API v2
description:         Please see README.md
homepage:            https://github.com/Yelp/yelp-api/tree/master/v2/haskell
license-file:        ../../LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-yelp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson                         >= 0.6        && < 0.10
                     , authenticate-oauth            >= 1.5        && < 1.6
                     , http-conduit                  >= 2.1        && < 2.2
